# zero2prod

./: .dockerignore  .env  Cargo.toml  Dockerfile  spec.yaml
.cargo/: config.toml
.github/workflows/: audit.yml  general.yml
configuration/: base.yaml  local.yaml  production.yaml
migrations/: 20230321142344_create_subscription_tokens_table.sql  20230324035648_create_users_table.sql  20230327143303_seed_user.sql  20230327225125_create_idempotency_table.sql  20230328032942_create_newsletter_issues_table.sql  20230328033029_create_issue_delivery_queue_table.sql
scripts/: init_db.sh  init_redis.sh
src/: authentication.rs  configuration.rs  email_client.rs  lib.rs  main.rs  session_state.rs  startup.rs  telemetry.rs  utils.rs
src/authentication/: middleware.rs  password.rs
src/domain/: new_subscriber.rs  subscriber_email.rs  subscriber_name.rs
src/idempotency/: key.rs  persistence.rs
src/routes/: mod.rs  newsletters.rs  subscriptions.rs  subscriptions_confirm.rs
src/routes/admin/: dashboard.rs  logout.rs  mod.rs
src/routes/admin/newsletter/: get.rs  post.rs
src/routes/admin/password/: get.rs  post.rs
src/routes/login/: get.rs  post.rs
tests/: health_check.rs
tests/api/: admin_dashboard.rs  change_password.rs  health_check.rs  helpers.rs  login.rs  newsletter.rs  subscriptions.rs  subscriptions_confirm.rs
